<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husarion_ugv_teleop</name>
  <version>2.3.2</version>
  <description>Package enabling robot teleoperation via gamepad.</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com</url>
  <url type="repository">https://github.com/husarion/husarion_ugv_ros</url>
  <url type="bugtracker">https://github.com/husarion/husarion_ugv_ros/issues</url>

  <author email="zuzanna.mejer@husarion.com">Zuzanna Mejer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy2twist</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
